--- a/Programas3716370/Dinosaurio.xaml
+++ b/Programas3716370/Dinosaurio.xaml
@@ -5,12 +5,17 @@
              Title="Dinosaurio">
 	<ScrollView>
 		<VerticalStackLayout>
-			<Label
+            <Label
 				Text="Dinosaurio"
 				VerticalOptions="Center"
 				HorizontalOptions="Center" />
 
-			<Entry x:Name="entry1" Placeholder="Digite el nombre"
+            <Image
+                Source="din.png"
+                Margin="10"
+                VerticalOptions="Center"
+                WidthRequest="500"/>
+            <Entry x:Name="entry1" Placeholder="Digite el nombre"
 				   BackgroundColor="Gray" Margin="10"/>
 
 			<Entry x:Name="entry2" Placeholder="Digite el peso en kg"
