Cambios en los archivos del menú, gasolinera, cambio, triangulo y dinosaurio

--- a/Programas3716370/Cambio.xaml
+++ b/Programas3716370/Cambio.xaml
@@ -2,24 +2,25 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Programas3716370.Cambio"
-             Title="Cambio">
-    <VerticalStackLayout>
-        <Label 
-            Text="Cambio de clientes"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+             Title="Cambio del Cliente">
+    <ScrollView>
+        <VerticalStackLayout>
+            <Image 
+                Source="cam1.webp"
+                WidthRequest="400"
+                VerticalOptions="Center"
+                />
+            <Entry x:Name="entry1" Placeholder="Dinero del cliente"
+                   Margin="10"/>
+    
+            <Entry x:Name="entry2" Placeholder="Costo del articulo"
+                   Margin="10"/>
+    
+            <Entry x:Name="entry3" Placeholder="Dinero del cliente"
+                   Margin="10"/>
 
+            <Button Text="Calcular" Clicked="Button_Clicked" Margin="10"/>
 
-        <Entry x:Name="entry1" Placeholder="Dinero del cliente"
-                BackgroundColor="Gray" Margin="10"/>
-        
-        <Entry x:Name="entry2" Placeholder="Costo del articulo"
-         BackgroundColor="Gray" Margin="10"/>
-        
-        <Entry x:Name="entry3" Placeholder="Dinero del cliente"
-          Margin="10"/>
-
-        <Button Text="Calcular" Clicked="Button_Clicked" />
-
-    </VerticalStackLayout>
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
