--- a/Programas3716370/Menu.xaml
+++ b/Programas3716370/Menu.xaml
@@ -2,66 +2,62 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Programas3716370.Menu"
-             Title="Menu"
+             Title="Menú"
             >
     <VerticalStackLayout>
-        <Label 
-            Text="MENU"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center"
-            VerticalTextAlignment="Start"
-            Padding="0"
-            FontSize="Title"/>
-
-        <Button Text="Cambio"
-                VerticalOptions="Center"
-                HorizontalOptions="Center"
-                Clicked="Button_Clicked"
-                BackgroundColor="Gray"
-                HeightRequest="60"
-                WidthRequest="190"
-                Margin="10"
-                BorderWidth="5"
-                BorderColor="Black"
-                FontSize="Medium"
+        <Button 
+            Text="Cambio"
+             VerticalOptions="Center"
+             HorizontalOptions="Center"
+             Clicked="Button_Clicked"
+             BackgroundColor="Gray"
+             HeightRequest="60"
+             WidthRequest="190"
+             Margin="10"
+             BorderWidth="5"
+             BorderColor="Black"
+             FontSize="Medium"
                 />
 
-        <Button Text="Triangulo"
-        VerticalOptions="Center"
-        HorizontalOptions="Center"
-        Clicked="Button_Clicked_1"
-        BackgroundColor="Black"
-        TextColor="LightGrey"
-        HeightRequest="60"
-        WidthRequest="190"
-        Margin="10"
-        BorderWidth="5"
-                BorderColor="Gray"
-                FontSize="Medium"/>
+        <Button 
+            Text="Triangulo"
+            VerticalOptions="Center"
+            HorizontalOptions="Center"
+            Clicked="Button_Clicked_1"
+            BackgroundColor="Black"
+            TextColor="LightGrey"
+            HeightRequest="60"
+            WidthRequest="190"
+            Margin="10"
+            BorderWidth="5"
+            BorderColor="Gray"
+            FontSize="Medium"/>
 
-        <Button Text="Dinosaurio"
-         VerticalOptions="Center"
-         HorizontalOptions="Center"
-         Clicked="Button_Clicked_2"
-         BackgroundColor="Gray"
-         HeightRequest="60"
-         WidthRequest="190"
-         Margin="10"
-         BorderWidth="5"
-                BorderColor="Black"
-                FontSize="Medium"/>
+            <Button 
+                Text="Dinosaurio"
+                 VerticalOptions="Center"
+                 HorizontalOptions="Center"
+                 Clicked="Button_Clicked_2"
+                 BackgroundColor="Gray"
+                 HeightRequest="60"
+                 WidthRequest="190"
+                 Margin="10"
+                 BorderWidth="5"
+                 BorderColor="Black"
+                 FontSize="Medium"/>
 
-        <Button Text="Gasolinera"
- VerticalOptions="Center"
- HorizontalOptions="Center"
- Clicked="Button_Clicked_3"
- BackgroundColor="Black"
- TextColor="LightGrey"
- HeightRequest="60"
- WidthRequest="190"
- Margin="10"
- BorderWidth="5"
-         BorderColor="Gray"
-         FontSize="Medium"/>
+        <Button 
+             Text="Gasolinera"
+             VerticalOptions="Center"
+             HorizontalOptions="Center"
+             Clicked="Button_Clicked_3"
+             BackgroundColor="Black"
+             TextColor="LightGrey"
+             HeightRequest="60"
+             WidthRequest="190"
+             Margin="10"
+             BorderWidth="5"
+             BorderColor="Gray"
+             FontSize="Medium"/>
     </VerticalStackLayout>
 </ContentPage>
