--- a/Programas3716370/Triangulo.xaml
+++ b/Programas3716370/Triangulo.xaml
@@ -2,24 +2,24 @@
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Programas3716370.Triangulo"
-             Title="Triangulo">
-    <VerticalStackLayout>
-        <Label 
-            Text="Superficie de un triangulo"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center"
-            />
+             Title=" Superficie de un Triángulo">
+    <ScrollView>
+        <VerticalStackLayout>
+            <Image Source="triangulo.png"
+                   WidthRequest="300"
+                   VerticalOptions="Center"
+                   Margin="10"/>
+            <Entry x:Name="entry1" Placeholder="Digite la base del triangulo"
+                   Margin="10"/>
 
+            <Entry x:Name="entry2" Placeholder="Digite la altura del triangulo"
+                   Margin="10"/>
 
-        <Entry x:Name="entry1" Placeholder="Digite la base del triangulo"
-         BackgroundColor="Gray" Margin="10"/>
+            <Label x:Name="labelResultado" Text="La superficie del triángulo es: " 
+                   FontSize="Subtitle"
+                   Margin="10"/>
 
-        <Entry x:Name="entry2" Placeholder="Digite la altura del triangulo"
-  BackgroundColor="Gray" Margin="10"/>
-
-        <Label x:Name="labelResultado" Text="La superficie del triángulo es: " FontSize="Medium"/>
-
-
-        <Button Text="Calcular" Clicked="Button_Clicked" />
-    </VerticalStackLayout>
+            <Button Text="Calcular" Clicked="Button_Clicked" Margin="10"/>
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
