cambios en el menú

--- a/Programas3716370/Menu.xaml
+++ b/Programas3716370/Menu.xaml
@@ -16,8 +16,7 @@
              Margin="10"
              BorderWidth="5"
              BorderColor="Black"
-             FontSize="Medium"
-                />
+             FontSize="Medium"/>
 
         <Button 
             Text="Triangulo"
