--- a/Programas3716370/Menu.xaml
+++ b/Programas3716370/Menu.xaml
@@ -4,25 +4,53 @@
              x:Class="Programas3716370.Menu"
              Title="Menú"
             >
-    <VerticalStackLayout>
-        <Button 
-            Text="Cambio"
-             VerticalOptions="Center"
-             HorizontalOptions="Center"
-             Clicked="Button_Clicked"
-             BackgroundColor="Gray"
-             HeightRequest="60"
-             WidthRequest="190"
-             Margin="10"
-             BorderWidth="5"
-             BorderColor="Black"
-             FontSize="Medium"/>
-
-        <Button 
-            Text="Triangulo"
+    <ScrollView>
+        <VerticalStackLayout>
+            <Button 
+           Text="Cambio"
             VerticalOptions="Center"
             HorizontalOptions="Center"
-            Clicked="Button_Clicked_1"
+            Clicked="Button_Clicked"
+            BackgroundColor="Gray"
+            HeightRequest="60"
+            WidthRequest="190"
+            Margin="10"
+            BorderWidth="5"
+            BorderColor="Black"
+            FontSize="Medium"/>
+
+            <Button 
+           Text="Triangulo"
+           VerticalOptions="Center"
+           HorizontalOptions="Center"
+           Clicked="Button_Clicked_1"
+           BackgroundColor="Black"
+           TextColor="LightGrey"
+           HeightRequest="60"
+           WidthRequest="190"
+           Margin="10"
+           BorderWidth="5"
+           BorderColor="Gray"
+           FontSize="Medium"/>
+
+            <Button 
+               Text="Dinosaurio"
+                VerticalOptions="Center"
+                HorizontalOptions="Center"
+                Clicked="Button_Clicked_2"
+                BackgroundColor="Gray"
+                HeightRequest="60"
+                WidthRequest="190"
+                Margin="10"
+                BorderWidth="5"
+                BorderColor="Black"
+                FontSize="Medium"/>
+
+            <Button 
+            Text="Gasolinera"
+            VerticalOptions="Center"
+            HorizontalOptions="Center"
+            Clicked="Button_Clicked_3"
             BackgroundColor="Black"
             TextColor="LightGrey"
             HeightRequest="60"
@@ -33,30 +61,17 @@
             FontSize="Medium"/>
 
             <Button 
-                Text="Dinosaurio"
-                 VerticalOptions="Center"
-                 HorizontalOptions="Center"
-                 Clicked="Button_Clicked_2"
-                 BackgroundColor="Gray"
-                 HeightRequest="60"
-                 WidthRequest="190"
-                 Margin="10"
-                 BorderWidth="5"
-                 BorderColor="Black"
-                 FontSize="Medium"/>
-
-        <Button 
-             Text="Gasolinera"
-             VerticalOptions="Center"
-             HorizontalOptions="Center"
-             Clicked="Button_Clicked_3"
-             BackgroundColor="Black"
-             TextColor="LightGrey"
-             HeightRequest="60"
-             WidthRequest="190"
-             Margin="10"
-             BorderWidth="5"
-             BorderColor="Gray"
-             FontSize="Medium"/>
-    </VerticalStackLayout>
+               Text="About"
+                VerticalOptions="Center"
+                HorizontalOptions="Center"
+                Clicked="Button_Clicked_4"
+                BackgroundColor="Gray"
+                HeightRequest="60"
+                WidthRequest="190"
+                Margin="10"
+                BorderWidth="5"
+                BorderColor="Black"
+                FontSize="Medium"/>
+        </VerticalStackLayout>
+    </ScrollView>
 </ContentPage>
